--- a/src/main/resources/templates/sbu/web/datatable.html
+++ b/src/main/resources/templates/sbu/web/datatable.html
@@ -162,8 +162,8 @@
       </tr>
     </thead>
     <tbody>
-      <tr th:each="item : ${page}">
-        <th>
+      <tr th:if="${td}" th:each="item : ${page}">
+        <td th:unless="${itemMenuOff}">
           <div class="dropdown">
             <button class="btn btn-secondary dropdown-toggle" type="button"
               data-bs-toggle="dropdown" aria-expanded="false">
@@ -188,9 +188,12 @@
               </th:block>
             </ul>
           </div>
-        </th>
+        </td>
         <th:block th:replace="${td}"></th:block>
       </tr>
+      <th:block th:if="${tr}" th:each="item : ${page}">
+        <th:block th:replace="${tr}"></th:block>
+      </th:block>
     </tbody>
   </table>
 
