Remove fomantic ui

--- a/src/main/resources/templates/sbu/web/datatable.html
+++ b/src/main/resources/templates/sbu/web/datatable.html
@@ -129,7 +129,7 @@
   </div>
   <!-- Filter Options End-->
 
-  <table class="ui very basic table">
+  <table class="table">
     <thead>
       <tr>
         <th scope="col">
