Show attachments 1st group content

--- a/src/main/resources/templates/sbu/attachments/panel.html
+++ b/src/main/resources/templates/sbu/attachments/panel.html
@@ -37,7 +37,7 @@
               [[${#messages.msgOrNull('sbu.attachment.group.' + fileGroup) ?: fileGroup}]]
             </button>
           </h2>
-          <div th:id="'collapse_' + ${groupIndex.index}" class="accordion-collapse collapse"
+          <div th:id="'collapse_' + ${groupIndex.index}" class="accordion-collapse collapse show"
             th:attr="aria-labelledby='heading_' + ${groupIndex.index}"
             data-bs-parent="#accordionFileList">
             <div class="accordion-body">
