--- a/src/main/resources/templates/sbu/web/datagrid.html
+++ b/src/main/resources/templates/sbu/web/datagrid.html
@@ -47,7 +47,7 @@
         <!--   <form class="row g-3" method="GET" th:action="@{${route.indexPath}}"> -->
 
         <!-- Start: Fields for querying -->
-        <th:block th:each="field : ${queryConfig.queryableFields}">
+        <th:block th:each="field : ${queryConfig.fields}">
           <div class="col-8"
             th:if="${queryConfig.getFilterFields.get(field).inputType} ne 'hidden'">
             <label class="form-label" th:if="${#messages.msgOrNull('sbu.web.datatable.field.' + itemClass.simpleName + '.' +
@@ -117,6 +117,8 @@
             <option value="10">10</option>
             <option value="20">20</option>
             <option value="30">30</option>
+            <option value="50">50</option>
+            <option value="100">100</option>
           </select>
         </div>
 
