Add bs3 theme by passing attr

--- a/src/main/resources/templates/sbu/attachments/upload.html
+++ b/src/main/resources/templates/sbu/attachments/upload.html
@@ -1,7 +1,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <div th:fragment="bs5">
-  <div th:replace="~{sbu/jsf/new :: bs5}"></div>
+  <div th:replace="~{sbu/jsf/new-only-bs3 :: bs5}"></div>
 </div>
 
 </html>
