--- a/src/main/resources/templates/sbu/attachments/edit.html
+++ b/src/main/resources/templates/sbu/attachments/edit.html
@@ -1,7 +1,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <div th:fragment="bs5">
-  <div th:replace="~{sbu/jsf/edit :: bs5}"></div>
+  <div th:replace="~{sbu/jsf/edit-only :: bs5}"></div>
 </div>
 
 </html>
