--- a/src/main/resources/templates/sbu/web/datatable.html
+++ b/src/main/resources/templates/sbu/web/datatable.html
@@ -15,7 +15,7 @@
       th:with="rid=${(T(java.lang.Math).random() * 2147483647).intValue()}" class="offcanvas-body">
       <react-form th:id="${'creationOptionForm' + rid}"
         th:action="@{${route.newPath}(__${@webModelAttributes.AJAX_TARGET_ID_NAME}__=${ajaxTargetId})}"
-        method="GET" ajax:target="${ajaxTargetId}">
+        method="GET" ajax:target="${ajaxTargetId}" theme="bs3">
         <button class="btn btn-primary" type="submit">
           [[${#messages.msgOrNull('sbu.ui.submit') ?: 'Submit'}]]
         </button>
