--- a/src/main/resources/templates/sbu/fsm/action-bar.html
+++ b/src/main/resources/templates/sbu/fsm/action-bar.html
@@ -1,6 +1,8 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
-<div th:fragment="bs5" class="card mb-2" th:id="${'fsmActionBar' + item.id}">
+<div th:fragment="bs5"
+  th:with="showPermittedMessage=${showPermittedMessage}, showProhibitedMessage=${showProhibitedMessage}, showProhibited=${showProhibited}"
+  class="card mb-2" th:id="${'fsmActionBar' + item.id}">
   <div
     th:with="item=${__${@webModelAttributes.ITEM_NAME}__}, ajaxTargetId=${__${@webModelAttributes.AJAX_TARGET_ID_NAME}__ ?: __${@webModelAttributes.FORWARDING_AJAX_TARGET_ID_NAME}__ ?: @webModelAttributes.AJAX_TARGET_ID_VALUE}"
     class="card-body">
@@ -13,10 +15,23 @@
         <button type="button" class="btn btn-outline-success">
           <i class="fas fa-location-arrow fa-fw"></i>
         </button>
-        <th:block th:each="trigger : ${item.phase.externalTriggers}">
-          <button type="button" class="btn btn-outline-success"
-            hx:get="@{${item.joinPath('triggers', trigger.name)}}" hx:target="${'#' + ajaxTargetId}"
-            hx-ext="json-enc">[[${trigger.displayName}]]</button>
+        <th:block th:each="activeTrigger : ${item.phase.activeTriggers}">
+          <button th:unless="${activeTrigger.disable}" type="button" class="btn btn-outline-success"
+            hx:get="@{${item.joinPath('triggers', activeTrigger.trigger.name)}}"
+            hx:target="${'#' + ajaxTargetId}" hx-ext="json-enc">
+            [[${activeTrigger.trigger.displayName}]]
+            <span th:if="${showPermittedMessage} and ${activeTrigger.message}">
+              [[${': ' + activeTrigger.message}]]
+            </span>
+          </button>
+          <button
+            th:if="${activeTrigger.disable} and (${showProhibited} or (${showProhibitedMessage} and ${activeTrigger.message}))"
+            type="button" class="btn btn-outline-success" disabled>
+            [[${activeTrigger.trigger.displayName}]]
+            <span th:if="${showProhibitedMessage} and ${activeTrigger.message}">
+              [[${': ' + activeTrigger.message}]]
+            </span>
+          </button>
         </th:block>
         <button
           hx:get="@{${item.joinPath('triggers')}(__${@webModelAttributes.FORWARDING_AJAX_TARGET_ID_NAME}__=${ajaxTargetId})}"
