--- a/src/main/resources/templates/sbu/fsm/content-editor.html
+++ b/src/main/resources/templates/sbu/fsm/content-editor.html
@@ -11,23 +11,30 @@
         #messages.msgOrNull('sbu.fsm.content-editor.tabs.main') ?: 'Main'}]]
       </button>
     </li>
-    <li th:if="${item.phase.stateRecord.hasViewableForm(item.phase.stateMachine)}" class="nav-item"
-      role="presentation">
-      <button class="nav-link" data-bs-toggle="tab" th:attr="data-bs-target=${'#stateForm' + fid}"
-        type="button" role="tab">
-        [[${#messages.msgOrNull(item.phase.stateRecord.state.class.simpleName + '.' +
-        item.phase.stateRecord.state.name + '.tabs.stateForms') ?:
-        #messages.msgOrNull('sbu.fsm.content-editor.tabs.stateForms') ?: 'State Form(s)'}]]
-      </button>
-    </li>
-    <li th:if="${item.phase.stateRecord.hasEntireViewableForms(item.phase.stateMachine)}"
+
+    <li
+      th:each="formType,iter : ${item.phase.stateRecord.getViewableForms(item.phase.stateMachine)}"
       class="nav-item" role="presentation">
       <button class="nav-link" data-bs-toggle="tab"
-        th:attr="data-bs-target=${'#entireStateForms' + fid}" type="button" role="tab">
+        th:attr="data-bs-target=${'#viewableForm' + fid + '_' + iter.index}" type="button"
+        role="tab">
         [[${#messages.msgOrNull(item.phase.stateRecord.state.class.simpleName + '.' +
-        item.phase.stateRecord.state.name + '.tabs.entireStateForms') ?:
-        #messages.msgOrNull('sbu.fsm.content-editor.tabs.entireStateForms') ?: 'Entire State
-        Form(s)'}]]
+        item.phase.stateRecord.state.name + '.tabs.' + formType) ?:
+        #messages.msgOrNull(item.phase.stateRecord.state.class.simpleName + '.stateForms.' +
+        formType) ?: formType}]]
+      </button>
+    </li>
+
+    <li
+      th:each="formType,iter : ${item.phase.stateRecord.getEntireViewableForms(item.phase.stateMachine)}"
+      class="nav-item" role="presentation">
+      <button class="nav-link" data-bs-toggle="tab"
+        th:attr="data-bs-target=${'#entireStateForms' + fid + '_' + iter.index}" type="button"
+        role="tab">
+        [[${#messages.msgOrNull(item.phase.stateRecord.state.class.simpleName + '.' +
+        item.phase.stateRecord.state.name + '.tabs.entire.' + formType.key) ?:
+        #messages.msgOrNull(item.phase.stateRecord.state.class.simpleName + '.stateForms.entire.' +
+        formType.key) ?: 'Entire ' + formType.key}]]
       </button>
     </li>
   </ul>
@@ -38,44 +45,39 @@
       </div>
     </div>
 
-    <div th:if="${item.phase.stateRecord.hasViewableForm(item.phase.stateMachine)}"
-      class="tab-pane fade" th:id="${'stateForm' + fid}" role="tabpanel">
-      <th:block th:if="${item.phase.stateRecord.hasForm}">
-        <th:block th:each="stateForm :${item.phase.stateRecord.state.forms}"
-          th:with="rid=${(T(java.lang.Math).random() * 2147483647).intValue()}">
-          <div th:if="${item.phase.stateMachine.canFire(stateForm.viewableTriggerStock.get)}"
-            th:id="${'embedded' + rid}" class="pt-2">
-            <a hx:target="${'#embedded' + rid}"
-              hx:get="@{${item.joinPath('forms', stateForm.formTypeStock.get)}(_ajaxTargetId=${'embedded' + rid}, _backTargetId=${ajaxTargetId})}"
-              hx-ext="json-enc" hx-trigger="load"></a>
-          </div>
-        </th:block>
+    <div
+      th:each="formType,iter : ${item.phase.stateRecord.getViewableForms(item.phase.stateMachine)}"
+      class="tab-pane fade" th:id="${'viewableForm' + fid + '_' + iter.index}" role="tabpanel">
+      <th:block th:with="rid=${(T(java.lang.Math).random() * 2147483647).intValue()}">
+        <div th:id="${'embedded' + rid}" class="pt-2">
+          <a hx:target="${'#embedded' + rid}"
+            hx:get="@{${item.joinPath('forms', formType)}(_ajaxTargetId=${'embedded' + rid}, _backTargetId=${ajaxTargetId})}"
+            hx-ext="json-enc" hx-trigger="load"></a>
+        </div>
       </th:block>
     </div>
 
-    <div th:if="${item.phase.stateRecord.hasEntireViewableForms(item.phase.stateMachine)}"
-      class="tab-pane fade" th:id="${'entireStateForms' + fid}" role="tabpanel">
+    <div
+      th:each="formTypeData,iter : ${item.phase.stateRecord.getEntireViewableForms(item.phase.stateMachine)}"
+      class="tab-pane fade" th:id="${'entireStateForms' + fid + '_' + iter.index}" role="tabpanel">
       <ul class="list-group pt-2"
         th:with="formDataTable=${item.phase.stateRecord.getEntireViewableForms(item.phase.stateMachine)}">
-        <th:block th:each="formTypeData : ${formDataTable}">
-          <th:block th:each="formBranchData : ${formTypeData.value}">
-            <a class="list-group-item" data-bs-toggle="modal" data-bs-target="#exampleModal"
-              hx-target="#modelForm"
-              hx:get="@{${item.joinPath('forms', formTypeData.key, 'formId', formBranchData.value)}(__${@webModelAttributes.FORWARDING_AJAX_TARGET_ID_NAME}__=${'embedded' + rid}, __${@webModelAttributes.FORWARDING_BACK_TARGET_ID_NAME}__=${ajaxTargetId})}"
-              hx-ext="json-enc">
-              [[${formTypeData.key}]] [[${formBranchData.key}]]
-            </a>
-          </th:block>
+        <th:block th:each="formBranchData : ${formTypeData.value}">
+          <a class="list-group-item" data-bs-toggle="modal" data-bs-target="#stateFormModal"
+            hx-target="#modelForm"
+            hx:get="@{${item.joinPath('forms', formTypeData.key, 'formId', formBranchData.value)}(__${@webModelAttributes.FORWARDING_AJAX_TARGET_ID_NAME}__=${'embedded' + rid}, __${@webModelAttributes.FORWARDING_BACK_TARGET_ID_NAME}__=${ajaxTargetId})}"
+            hx-ext="json-enc">
+            [[${formBranchData.key}]]
+          </a>
         </th:block>
       </ul>
 
-      <!-- Modal -->
-      <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
-        aria-hidden="true">
+      <div class="modal fade" id="stateFormModal" tabindex="-1"
+        aria-labelledby="stateFormModalLabel" aria-hidden="true">
         <div class="modal-dialog">
           <div class="modal-content">
             <div class="modal-header">
-              <h5 class="modal-title" id="exampleModalLabel">State Form</h5>
+              <h5 class="modal-title" id="stateFormModalLabel">State Form</h5>
               <button type="button" class="btn-close" data-bs-dismiss="modal"
                 aria-label="Close"></button>
             </div>
