--- a/src/main/resources/templates/sbu/web/datatable.html
+++ b/src/main/resources/templates/sbu/web/datatable.html
@@ -179,14 +179,34 @@
               data-bs-toggle="dropdown" aria-expanded="false">
               <i class="fas fa-gear"></i>
             </button>
-            <ul class="dropdown-menu">
-              <li>
+            <ul class="dropdown-menu"
+              th:with="hasUserPermissionController=${@sbuHtml.hasBeanByType(T(com.github.wnameless.spring.boot.up.permission.UserPermissionControllerTemplate))}, rid=${(T(java.lang.Math).random() * 2147483647).intValue()}">
+              <li th:if="${hasUserPermissionController}" th:id="${'itemUpdate' + rid}"
+                hx:post="@{${'/user-permissions/can/UPDATE/to/' + item.resourceName + '/on/' + item.id}}"
+                th:attr="hx-vals=${'js:{classes: ''text-primary'', content: document.getElementById('''+ 'itemUpdate' + rid  +''').innerHTML}'}"
+                hx-trigger="intersect" hx-target="this">
+                <a hx:get="@{${item.getEditPath(queryConfig)}}" hx:target="${'#' + ajaxTargetId}"
+                  hx-ext="json-enc" class="dropdown-item disabled">
+                  [[${#messages.msgOrNull('sbu.ui.edit') ?: 'Edit'}]]</a>
+              </li>
+              <li th:unless="${hasUserPermissionController}">
                 <a th:classappend="${user == null || user.canUpdate(item) || !user.existsPermission(itemClass)} ? 'text-primary' : 'disabled'"
                   hx:get="@{${item.getEditPath(queryConfig)}}" hx:target="${'#' + ajaxTargetId}"
                   hx-ext="json-enc" class="dropdown-item">
                   [[${#messages.msgOrNull('sbu.ui.edit') ?: 'Edit'}]]</a>
               </li>
-              <li>
+
+              <li th:if="${hasUserPermissionController}" th:id="${'itemDelete' + rid}"
+                hx:post="@{${'/user-permissions/can/DELETE/to/' + item.resourceName + '/on/' + item.id}}"
+                th:attr="hx-vals=${'js:{classes: ''text-danger'', content: document.getElementById('''+ 'itemDelete' + rid  +''').innerHTML}'}"
+                hx-trigger="intersect" hx-target="this">
+                <a hx:delete="@{${item.getDeletePath(queryConfig)}}"
+                  hx:confirm="${#messages.msgOrNull('sbu.ui.confirmation.delete') ?: 'Are you sure?'}"
+                  hx:target="${'#' + ajaxTargetId}" hx-ext="json-enc"
+                  class="dropdown-item disabled">
+                  [[${#messages.msgOrNull('sbu.ui.delete') ?: 'Delete'}]]</a>
+              </li>
+              <li th:unless="${hasUserPermissionController}">
                 <a th:classappend="${user == null || user.canDelete(item) || !user.existsPermission(itemClass)} ? 'text-danger' : 'disabled'"
                   hx:delete="@{${item.getDeletePath(queryConfig)}}"
                   hx:confirm="${#messages.msgOrNull('sbu.ui.confirmation.delete') ?: 'Are you sure?'}"
