--- a/src/main/resources/templates/sbu/fsm/bookmark.html
+++ b/src/main/resources/templates/sbu/fsm/bookmark.html
@@ -5,7 +5,7 @@
     th:with="item=${__${@webModelAttributes.ITEM_NAME}__}, ajaxTargetId=${__${@webModelAttributes.AJAX_TARGET_ID_NAME}__ ?: __${@webModelAttributes.FORWARDING_AJAX_TARGET_ID_NAME}__ ?: @webModelAttributes.AJAX_TARGET_ID_VALUE}">
     <button type="button" class="btn btn-outline-secondary" hx:get="@{${item.indexPath}}"
       hx-ext="json-enc" hx:target="${'#' + ajaxTargetId}">
-      <i class="fas fa-reply-all fa-fw"></i>
+      <i class="fas fa-filter fa-fw"></i>
     </button>
     <button th:block th:each="s : ${item.phase.allStates}" type="button"
       class="btn btn-outline-secondary"
