Add hx-push-url="true" to hx:get url

--- a/src/main/resources/templates/sbu/web/bookmark.html
+++ b/src/main/resources/templates/sbu/web/bookmark.html
@@ -4,15 +4,15 @@
   <div class="btn-group" role="group"
     th:with="bookmarkField=${bookmarkField}, queryConfig=${__${@webModelAttributes.QUERY_CONFIG_NAME}__}, item=${__${@webModelAttributes.ITEM_NAME}__}, ajaxTargetId=${__${@webModelAttributes.AJAX_TARGET_ID_NAME}__ ?: __${@webModelAttributes.FORWARDING_AJAX_TARGET_ID_NAME}__ ?: @webModelAttributes.AJAX_TARGET_ID_VALUE}">
     <button type="button" class="btn btn-outline-secondary" hx:get="@{${item.indexPath}}"
-      hx-ext="json-enc" hx:target="${'#' + ajaxTargetId}">
+      hx-push-url="true" hx-ext="json-enc" hx:target="${'#' + ajaxTargetId}">
       <i class="fas fa-filter fa-fw"></i>
     </button>
     <button th:if="${queryConfig.getFilterFields.get(bookmarkField).hasSelectOption}" th:block
       th:each="opt : ${queryConfig.getFilterFields.get(bookmarkField).selectOption}" type="button"
       class="btn btn-outline-secondary"
       th:classappend="${(param['' + bookmarkField] != null) and (param['' + bookmarkField][0] eq opt.value)} ? 'active'"
-      hx:get="@{${item.indexPath}(__${bookmarkField}__=${opt.value})}" hx-ext="json-enc"
-      hx:target="${'#' + ajaxTargetId}">[[${opt.key}]]</button>
+      hx:get="@{${item.indexPath}(__${bookmarkField}__=${opt.value})}" hx-push-url="true"
+      hx-ext="json-enc" hx:target="${'#' + ajaxTargetId}">[[${opt.key}]]</button>
   </div>
 </div>
 
