--- a/src/main/resources/templates/sbu/web/datagrid.html
+++ b/src/main/resources/templates/sbu/web/datagrid.html
@@ -42,8 +42,8 @@
       <!-- This hx-on::before-request is important for removing offcanvas style attributes from html body -->
       <form
         hx-on::before-request="bootstrap.Offcanvas.getInstance(document.getElementById('filterOption')).hide();"
-        class="row g-3" hx:get="@{${route.indexPath}}" hx:target="${'#' + ajaxTargetId}"
-        hx-ext="json-enc">
+        class="row g-3" hx:get="@{${route.indexPath}}" hx-push-url="true"
+        hx:target="${'#' + ajaxTargetId}" hx-ext="json-enc">
         <!--   <form class="row g-3" method="GET" th:action="@{${route.indexPath}}"> -->
 
         <!-- Start: Fields for querying -->
@@ -128,8 +128,9 @@
             'Filter'}]]</button>
         </div>
         <div class="col-6">
-          <button hx:get="@{${route.indexPath}}" hx:target="${'#' + ajaxTargetId}" hx-ext="json-enc"
-            type="button" class="btn btn-warning">
+          <button hx:get="@{${route.indexPath}}" hx-push-url="true"
+            hx:target="${'#' + ajaxTargetId}" hx-ext="json-enc" type="button"
+            class="btn btn-warning">
             [[${#messages.msgOrNull('sbu.web.datatable.filter_option.reset') ?: 'Reset'}]]</button>
         </div>
       </form>
@@ -141,7 +142,7 @@
     <!-- Creation Button Begin -->
     <th:block th:if="${creationOption == null}">
       <button th:if="${user != null && itemClass != null && user.canCreate(itemClass)}"
-        class="btn btn-outline-success" hx:get="@{${route.newPath}}"
+        class="btn btn-outline-success" hx:get="@{${route.newPath}}" hx-push-url="true"
         hx:target="${'#' + ajaxTargetId}" hx-ext="json-enc">
         <i class="fas fa-file-circle-plus"></i>
       </button>
@@ -198,8 +199,8 @@
     <ul class="dropdown-menu">
       <li>
         <a th:classappend="${user == null || user.canUpdate(item)} ? 'text-primary' : 'disabled'"
-          hx:get="@{${item.getEditPath(queryConfig)}}" hx:target="${'#' + ajaxTargetId}"
-          hx-ext="json-enc" class="dropdown-item">
+          hx:get="@{${item.getEditPath(queryConfig)}}" hx-push-url="true"
+          hx:target="${'#' + ajaxTargetId}" hx-ext="json-enc" class="dropdown-item">
           [[${#messages.msgOrNull('sbu.ui.edit') ?: 'Edit'}]]</a>
       </li>
       <li>
